# aliasmanager

./: .gitignore  README.md  alias-manager.in  io.github.aayamrajshakya.aliasmanager.json  meson.build
.github/workflows/: flatpak.yml
data/: com.github.aliasmanager.desktop  io.github.aayamrajshakya.aliasmanager.desktop  io.github.aayamrajshakya.aliasmanager.metainfo.xml
src/: alias_dialog.py  alias_store.py  history.py  main.py  window.py
